assets/css/services.css
@import "reset.css";
@import "semantics.css";

header span {
    font-size: 2rem;
    font-weight: bold;
    display: block;
}

main section {
    height: 100%;
    display: flex;
    flex-direction: column;
    
}

main section h1 {
    color: #ffffff;
    text-align: center;
    font-size: 2.2rem;

    background-color: #21242d;
    padding: 2.5rem 0 1rem 0;
}

main section ul {
    flex-grow: 1;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2vw;

    margin: 2rem 0 2rem 0;
}

main ul li h2 {
    color: #ffffff;
    text-align: center;
    font-size: 1.8rem;
}

main ul li p {
    font-size: 1.1rem;
    margin: 1.3rem 0 0 0;
    max-width: 20rem;
    text-align: start;
    line-height: 1.9rem;
}

.image-service {
    display: flex;
    align-items: center;
    background-size: contain;
    width: 333px;
    height: 500px;
}

#image-service1 {
    background-image: url("../images/weight-training.jpg");
}
#image-service2 {
    background-image: url("../images/cardio-training.jpg");
}
#image-service3 {
    background-image: url("../images/personal-trainer.jpg");
}

/* using a wrapper because h2 text cannot be center vertically*/
.h2-wrapper {
    background-color: #ca2628;
    height: 10vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media screen and (max-width: 1144px){
    main section ul {
        flex-direction: column;
    }
}

